feat(ipv6): Projetar com localidades dinamicas (add/remove) + diagrama de arquitetura Mermaid
Atende o pedido de paridade com o IPv4: as localidades do Projetar deixam de ser
textarea e viram LINHAS EDITAVEIS que o usuario adiciona/remove livremente
(botao "Adicionar localidade" + remover por linha, como no IPv4). Backend passa a
ler varios campos 'local' (List) com fallback para o textarea antigo.

Diagrama de arquitetura: o plano agora inclui um Mermaid (topologyMermaid) com um
roteador por localidade e os enlaces WAN da topologia; renderizado no resultado
(mermaid@11 via jsdelivr, re-executado apos o swap htmx). Rotulos sanitizados
(sem HTML) e securityLevel loose so para conteudo gerado no servidor.

ipv6.js: handlers add/remove de localidade e render do Mermaid no htmx:afterSwap.
CSS .ipv6-diagrama (largura total, rola em telas pequenas). Bump ipv6.css/js v=d.
Testes HTTP do projetar atualizados para campos 'local'. Suite verde.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>